syntax = "proto3";

package authpb;

option go_package = "./authpb";

service AuthService {
    rpc SendOTPEmail(OTPEmailRequest) returns (OTPEmailResponse) {} 
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
}

message OTPEmailRequest {
    string login = 1;
}

message OTPEmailResponse {
    string email = 1;
}

message LoginRequest {
    string email = 1;
    string otp = 2;
}

message LoginResponse {
    string access = 1;
    string refresh = 2;
}

message RefreshRequest {
    string refresh = 1;
}

message RefreshResponse {
    string access = 1;
}