syntax = "proto3";

package emailpb;

option go_package = "./emailpb";

service EmailService {
    rpc SendOTP(OTPRequest) returns (EmailResponse) {}
}

message OTPRequest {
    string email = 1;
    string name = 2;
    string otp = 3;
}

message EmailResponse {}