syntax = "proto3";

package userpb;

option go_package = "./userpb";

service UserService {
    rpc GetProfile(ProfileRequest) returns (ProfileResponse) {}
    rpc GetCredentials(CredentialsRequest) returns (CredentialsResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
}

message ProfileRequest {
    string name = 1;
}

message ProfileResponse {
    string name = 1;
    string date = 2;
}

message CredentialsRequest {
    string login = 1;
}

message CredentialsResponse {
    string email = 1;
    string name = 2;
}

message LoginRequest {
    string email = 1;
}

message LoginResponse {
    string name = 1;
}